# chem_279_final

./: Austin_output.txt  C2H4_results.txt  C2H6_results.txt  C4H10_results.txt  C6H6_results.txt  CH4_results.txt  CMakeLists.txt  Central_Difference.cpp  Chem_279 final jeremy_casey.pptx  Gaussian.cpp  H2_results.txt  H2_test.cpp  Integrator.cpp  LICENSE  Makefile  Molecule.cpp  OVERLAP_VS.TXT  Overlap.cpp  README.MD  README.md  SCF.cpp  austin_impl_MINDO.cpp  c4h10_result.txt  c6h6_result.txt  cndo2_and_cndos_utils.cpp  cndos.cpp  cndos_utils.cpp  delta_plot.py  dockerfile  goal_vlaues.txt  h2_bond_optimization.csv  h2_parameter_optimization.csv  hw5.cpp  hw5_utils.cpp  hydrocarbon_results.csv  main.cpp  mindo.cpp  mindo_test.cpp  mindo_utils.cpp  optimize_cndo_s  (+7 more)
Include/: Arma_Utils.h  Molecule.h  Overlap.h  Parameters.h  SCF.h
hydrocarbon_structures/: C2H4.txt  C2H6.txt  C6H6.txt  CH4.txt
parameter_optimization/: h2_bond_optimization.csv  h2_parameter_optimization.csv  hydrocarbon_optimizer.cpp  hydrocarbon_results.csv  optimize_cndo_s  optimize_cndo_s.cpp  test_cndo_s.cpp
plots/: relative_energy_plot.py
plots_and_figs/: all_plot.py  hydro_plot.py  newest_plot.py
results/: cndo2_results.csv  cndos_results.csv  combined_results.csv  mindo_results.csv
sample_input/: C4H10.txt  CH4.xyz
sample_output/: goal_values.txt
